# osworld-agentbeats-a2a-greenwhite

./: .env.example  .gitignore  AWS_GIT_COLLAB_GUIDE.md  README.md  environment.yml  evaluation_examples  pyproject.toml  run.sh
green/: a2a_app.py  a2a_models.py  app.py  osworld_adapter.py  result_writer.py  validators.py  white_client.py
green_ctrl/: run.sh
run_modes/: by_domain.py  runner.py  sample.py  single.py  sweep_small.py
scripts/: a2a_probe.sh  check_osworld_ami.sh  green_smoke.sh  merge_agentbeats.sh  run_slice.sh  setup_env.sh  start_agentbeats_ctrl.sh  start_agentbeats_ctrl_green.sh  start_agentbeats_ctrl_white.sh  start_agentbeats_ctrl_white_sim.sh  start_green.sh  start_white_sim.sh  stop_agentbeats_ctrl_green.sh  stop_agentbeats_ctrl_white.sh  stop_agentbeats_ctrl_white_sim.sh  stop_green.sh  stop_white_sim.sh  test_green_smoke.sh
tools/: a2a_probe.py
white_agent/: server.py
white_agent/policy/: qwen3vl_policy.py
white_agent/utils/: qwen_vl_utils.py
white_ctrl/: run.sh
white_sim/: server.py
white_sim_ctrl/: run.sh
